tests/Checker/everything/errors/12a.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *12: attempt to use a scalar/function as an array
Compilation was unsuccessful.
